<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_movie_white_48dp"
            android:id="@+id/nav_show_airing_today"
            android:title="@string/three_d_movie" />

        <item
            android:icon="@drawable/ic_theaters_white"
            android:id="@+id/nav_top_rated_movie"
            android:title="@string/top_rated_movie" />

        <!--<item-->
            <!--android:icon="@drawable/ic_settings_white"-->
            <!--android:id="@+id/nav_setting"-->
            <!--android:title="@string/setting" />-->
        <item
            android:id="@+id/nav_share"
            android:title="@string/share"
            android:icon="@drawable/ic_share_white_48dp"/>

        <item
            android:id="@+id/nav_feedback"
            android:title="@string/feedback"
            android:icon="@drawable/ic_feedback_white_48dp"
            />

        <!--<item-->
            <!--android:id="@+id/nav_help"-->
            <!--android:title="@string/help"-->
            <!--android:icon="@drawable/ic_help_white_48dp"-->
            <!--/>-->

        <item
            android:id="@+id/nav_rate_us"
            android:title="@string/rate_us"
            android:icon="@drawable/ic_star_rate_white_18dp"/>
        <!--<item-->
            <!--android:id="@+id/nav_about_me"-->
            <!--android:title="@string/about_us"-->
            <!--android:icon="@drawable/ic_info_white_48dp"/>-->





    </group>
</menu>