<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF171920"
    android:id="@+id/relative_layout"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="kumarsanket.torrentmovie.SecondMovieDetailActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_collapseMode="pin"
        app:contentInsetStart="0dp"
        tools:ignore="UnusedAttribute">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true">

            <ImageView
                android:layout_width="50dp"
                android:padding="10dp"
                android:layout_alignParentLeft="true"
                android:clickable="true"
                android:id="@+id/back_button"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_keyboard_arrow_left_white_48dp"
                android:layout_height="match_parent"
                tools:ignore="ContentDescription,RtlHardcoded" />

            <TextView
                android:layout_marginLeft="55dp"
                android:textColor="#f4f1f1"
                android:textSize="19dp"
                android:visibility="invisible"
                android:layout_alignParentLeft="true"
                android:fontFamily="cursive"
                android:text="Transformers : The Dark Moon Love"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/toolbar_movie_name"
                android:gravity="center_vertical"
                tools:ignore="HardcodedText,RtlHardcoded,SpUsage"
                android:layout_toLeftOf="@+id/download_movie_icon"
                android:maxLines="1" />

            <ImageView
                android:id="@+id/download_movie_icon"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginRight="55dp"
                android:padding="13dp"
                android:layout_centerInParent="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:src="@drawable/ic_file_download_white"
                android:layout_alignParentRight="true"/>

            <ImageView
                android:id="@+id/share_icon"
                android:layout_width="50dp"
                android:padding="13dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:src="@drawable/ic_share_white_24dp"
                tools:ignore="ContentDescription,RtlHardcoded" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ScrollViewSize">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">
                <ImageView
                    android:layout_width="280dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="380dp"
                    android:fitsSystemWindows="true"
                    android:id="@+id/movie_image"
                    android:scaleType="fitXY"
                    app:layout_collapseMode="parallax"
                    tools:ignore="ContentDescription" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    app:cardBackgroundColor="#181818"
                    android:layout_height="60dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:id="@+id/movie_name"
                            android:gravity="bottom"
                            android:textColor="#eae7e7"
                            android:paddingLeft="10dp"
                            android:textStyle="bold"
                            android:text="Transformer"
                            tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry"
                            android:maxLines="1" />

                        <TextView
                            android:paddingTop="4dp"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="Action"
                            android:singleLine="true"
                            android:id="@+id/movie_genre"
                            android:layout_gravity="top"
                            android:textColor="#a7a3a3"
                            android:paddingLeft="10dp"
                            android:textStyle="bold"
                            tools:ignore="Deprecated,HardcodedText,RtlHardcoded,RtlSymmetry" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/description"
                    android:text="@string/description"
                    android:textColor="#FFF05225"
                    tools:ignore="HardcodedText,RtlHardcoded" />

                <TextView
                    android:layout_marginTop="8dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:layout_below="@id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/description_view"
                    android:text="Description"
                    android:textColor="#a7a3a3"
                    tools:ignore="HardcodedText,ObsoleteLayoutParam,RtlHardcoded" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="10dp"
                    android:textColor="#FFF05225"
                    android:id="@+id/trailer"
                    android:text="@string/trailer"
                    tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />

                <android.support.v7.widget.CardView
                    app:cardElevation="5dp"
                    android:visibility="visible"
                    android:id="@+id/trailer_card_view"
                    app:cardBackgroundColor="#282828"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@id/trailer"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    tools:ignore="ObsoleteLayoutParam">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:id="@+id/trailer_thumbnail"
                            tools:ignore="ContentDescription" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ccircle_background"
                            android:layout_centerInParent="true"
                            tools:ignore="ContentDescription" />

                        <ImageView
                            android:id="@+id/play_icon"
                            android:visibility="visible"
                            android:src="@drawable/ic_play_arrow_white_48dp"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerInParent="true"
                            tools:ignore="ContentDescription" />

                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <include
                    android:id="@+id/suggested"
                    layout="@layout/suggested_text_line"/>

                <android.support.v7.widget.RecyclerView
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/suggested_movie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/recycler_view"
                    tools:ignore="ObsoleteLayoutParam" />

                <TextView
                    android:visibility="visible"
                    android:id="@+id/wait_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wait_a_second"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_horizontal"
                    android:textColor="#FFF05225"
                    tools:ignore="HardcodedText" />



            </LinearLayout>

        </RelativeLayout>

    </ScrollView>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:layout_anchorGravity="end|bottom"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:id="@+id/fab"
        android:scaleType="center"
        android:elevation="10dp"
        android:visibility="invisible"
        android:src="@drawable/ic_cloud_download_white_24dp"
        android:background="@drawable/fab_background"
        tools:ignore="ContentDescription,RtlHardcoded,UnusedAttribute"
        android:contentDescription="" />

    <!--<include-->
        <!--layout="@layout/download_layout"/>-->


    <com.google.android.gms.ads.AdView
        android:layout_marginTop="3dp"
        android:id="@+id/banner_ads"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/admob_banner_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ObsoleteLayoutParam" />







</RelativeLayout>
